--- a/кагаздары.html
+++ b/кагаздары.html
@@ -167,7 +167,7 @@
           <p class="u-align-justify u-custom-font u-font-georgia u-large-text u-text u-text-variant u-text-2">
             Дене тарбия — бул тандалган эмес, керек болгон иш. Aр бир сабакта жаштарга күч, 
             чыгармачылык жана татыктуу жолду көрсөтөт. Менин максатым окуучуларга спорттун рухун тараткан жетекчи эле эмес, 
-            жан дүйнөсүнүн күчүн да тарбиялай алган спортчуларды даярдоо. <br>Дени сак улут - күчтүү мамлекет"
+            жан дүйнөсүнүн күчүн да тарбиялай алган спортчуларды даярдоо. <br>"Дени сак улут - күчтүү мамлекет"
              Адамдын эң башкы байлыгы бул - ден соолук! 
              <br> Эгерде ден - соолугуң начар болсо, бул дүйнө бир тыйынга да татыбайт. Андыктан окурмандар күн сайын спорт менен алектенип туралы.</p>
         </div>
